# maylang-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RELEASING.md
maylang_cli/: __init__.py  _version.py  bumper.py  checker.py  cli.py  parser.py  template.py
scripts/: smoke_company_repo.sh  verify_local.sh  verify_wheel.sh
tests/: test_check_required.py  test_enforce_diff.py  test_frontmatter.py  test_headings_order.py  test_verification.py  test_version_bump.py
